// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.commit.operations.sh given: [case36] get_one_git_config_identity reads git config when: [t1] a git config file is unparseable, and the guard runs then: it names the malfunction and the command to find the file 1`] = `
"🐢 bummer dude...

🐚 git.commit
   └─ 💥 MalfunctionError: git config could not be read (exit 128)

find the git config file at fault:
  $ git config --list --show-origin
"
`;

exports[`git.commit.operations.sh given: [case36] get_one_git_config_identity reads git config when: [t1] a git config file is unparseable, and the guard runs then: it names the malfunction and the command to find the file: stderr 1`] = `
"fatal: bad config line 1 in file <TEMP_DIR>/broken.gitconfig
🐢 bummer dude...

🐚 git.commit
   └─ 💥 MalfunctionError: git config could not be read (exit 128)

find the git config file at fault:
  $ git config --list --show-origin
"
`;

exports[`git.commit.operations.sh given: [case36] get_one_git_config_identity reads git config when: [t1b] a git config file is unparseable, and the grant nudge runs then: 🔴 it prints a soft line and returns — it never exits 1`] = `
"
🥥 did you know?
   ├─ commits will refuse: git config could not be read
   └─ git config --list --show-origin
"
`;

exports[`git.commit.operations.sh given: [case36] get_one_git_config_identity reads git config when: [t1c] a git config file is unparseable, and \`get\` renders then: 🔴 it reports the state and returns — it never exits 1`] = `
"🐢 lets check the sponsor...

🐚 git.commit.sponsor
   ├─ sponsor: (none bound)
   ├─ git config: could not be read
   └─ commits: will refuse

🥥 did you know?
   ├─ find the git config file at fault
   └─ git config --list --show-origin
"
`;

exports[`git.commit.operations.sh given: [case36] get_one_git_config_identity reads git config when: [t1d] git config holds no user.email, and \`get\` renders then: it names the git config fix before the bind forms 1`] = `
"🐢 lets check the sponsor...

🐚 git.commit.sponsor
   ├─ sponsor: (none bound)
   ├─ git config: holds no complete identity
   └─ commits: will refuse

🥥 did you know?
   ├─ a human fixes git config, or binds this tree's sponsor
   ├─ git config --global user.email "you@example.com"
   ├─ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
   └─ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.operations.sh given: [case36] get_one_git_config_identity reads git config when: [t1e] git config names a clone, and \`get\` renders then: it offers the bind forms alone — never a git config fix 1`] = `
"🐢 lets check the sponsor...

🐚 git.commit.sponsor
   ├─ sponsor: (none bound)
   ├─ git config: names a clone — the clone's machine
   └─ commits: will refuse

🥥 did you know?
   ├─ a human binds this tree's sponsor
   ├─ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
   └─ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.operations.sh given: [case39] assert_git_identity_read guards the reader contract when: [t0] a leaf reads the identity before the reader ran then: it exits 1, as a named malfunction — never a raw unbound crash: stderr 1`] = `
"💥 MalfunctionError: the git identity was read before get_one_git_config_identity ran
   this is a defect in the skill, never the caller's input — call the reader first
"
`;

exports[`git.commit.operations.sh given: [case39] assert_git_identity_read guards the reader contract when: [t0] a leaf reads the identity before the reader ran then: it exits 1, as a named malfunction — never a raw unbound crash: stdout 1`] = `
"💥 MalfunctionError: the git identity was read before get_one_git_config_identity ran
   this is a defect in the skill, never the caller's input — call the reader first
"
`;
